--- a/css/style.css
+++ b/css/style.css
@@ -294,6 +294,73 @@ h6 {
   }
 }
 
+.mainInfo__wrapper {
+  padding-bottom: 5vw;
+  position: relative;
+  overflow: hidden;
+}
+
+.mainInfo__wrapper .circle {
+  position: absolute;
+  border: 5px solid #ffffff;
+  border-radius: 50%;
+  opacity: 0.5;
+}
+
+.mainInfo__wrapper .circle:nth-child(2) {
+  top: 55px;
+  left: -45px;
+  width: 80px;
+  height: 80px;
+}
+
+.mainInfo__wrapper .circle:nth-child(3) {
+  top: 200px;
+  left: 50px;
+  width: 100px;
+  height: 100px;
+}
+
+.mainInfo__wrapper .circle:nth-child(4) {
+  top: 40%;
+  left: 10px;
+  width: 120px;
+  height: 120px;
+  border-width: 10px;
+  opacity: 0.3;
+}
+
+.mainInfo__wrapper .circle:nth-child(5) {
+  bottom: 50px;
+  left: 20%;
+  width: 50px;
+  height: 50px;
+  border-width: 15px;
+}
+
+.mainInfo__wrapper .circle:nth-child(6) {
+  top: 0;
+  right: -50px;
+  width: 80px;
+  height: 80px;
+  border-width: 15px;
+}
+
+.mainInfo__wrapper .circle:nth-child(7) {
+  bottom: -75px;
+  right: -65px;
+  width: 150px;
+  height: 150px;
+  border-width: 8px;
+}
+
+.mainInfo__wrapper .circle:nth-child(8) {
+  top: -80px;
+  left: 40%;
+  width: 100px;
+  height: 100px;
+}
+
 .mainInfo {
   height: 100%;
   width: 100%;
@@ -316,6 +383,7 @@ h6 {
   display: -ms-grid;
   display: grid;
   grid-gap: 20px;
+  padding-bottom: 15px;
   overflow: hidden;
 }
 
@@ -354,34 +422,6 @@ h6 {
   border-radius: 50%;
 }
 
-.mainInfo__container__img .circle {
-  position: absolute;
-  border-radius: 50%;
-  border: 10px solid #ffffff;
-  opacity: .5;
-}
-
-.mainInfo__container__img .circle:nth-of-type(2) {
-  width: 100px;
-  height: 100px;
-  top: 60px;
-  left: -30px;
-}
-
-.mainInfo__container__img .circle:first-of-type {
-  width: 120px;
-  height: 120px;
-  top: 80px;
-  right: -50px;
-}
-
-.mainInfo__container__img .circle:nth-of-type(3) {
-  width: 100px;
-  height: 100px;
-  bottom: 0;
-  left: -30px;
-}
-
 .mainInfo__container__info {
   -ms-grid-row-align: center;
       align-self: center;
@@ -401,12 +441,10 @@ h6 {
 }
 
 .mainInfo__container__info__btn {
-  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   justify-self: flex-end;
-  z-index: 2;
   max-width: 270px;
   padding: 7px 15px;
   border-radius: 30px;
