--- a/scss/style.scss
+++ b/scss/style.scss
@@ -104,84 +104,7 @@ $goldColor: #ffd900;
         transition: all .3s ease-in-out;
     }
 }
-@media (max-width: 767.8px){
-    .header__nav {
-        position: fixed;
-        top: 0;
-        left: 0;
-        padding: 15px;
-        padding-top: 55px;
-        width: 100%;
-        height: 100%;
-        min-height: 100vh;
-        background-color: $purpleColor;
-        text-align: center;
-        overflow: auto;
-        font-size: 18px;
-        transform: translateX(100%);
-        transition: all .2s ease-out;
-    }
-    .header__nav__list__item {
-        &:not(:last-child) {
-            margin-bottom: 20px;
-        }
-    }
-    .sublist__wrapper {
-        padding-bottom: 5px;
-        &::before {
-            content: '';
-            display: inline-block;
-            position: absolute;
-            bottom: 0;
-            height: 3px;
-            width: 0%;
-            left: 50%;
-            transform: translateX(0%);
-            border-radius: 3px;
-            background-color: $whiteColor;
-            transition: all .2s ease-in-out;
-        }
-        &.opened {
-            padding-bottom: 10px;
-            &::before {
-                    width: 50%;
-                    transform: translateX(-50%);
-            }
-            span::after {
-                transform: rotate(180deg);
-            }
-        }
-    }
 
-    .sublist__container {
-        max-height: 0;
-        overflow: hidden;
-        transition: max-height 0.2s ease-in-out;
-    }
-
-    .sublist__container__item {
-        margin-top: 10px;
-    }
-    body.active{
-        overflow: hidden;
-        .header__nav {
-            transform: translateX(0);
-        }
-        .header__burger {
-            &::after {
-                top: 50%;
-                transform: rotate(45deg);
-            }
-            &::before {
-                top: 50%;
-                transform: rotate(-45deg);
-            }
-            span {
-                transform: scale(0);
-            }
-        }
-    }
-}
 
 .mainInfo__wrapper {
     padding-bottom: 5vw;
@@ -256,8 +179,11 @@ $goldColor: #ffd900;
         border-top: 5vw solid #703fff;
         border-left: calc(100vw - 100px) solid transparent;
     }
+    padding-bottom: 100px;
 }
 .mainInfo__container {
+    position: relative;
+    z-index: 2;
     display: grid;
     grid-gap: 20px;
     padding-bottom: 15px;
@@ -265,6 +191,7 @@ $goldColor: #ffd900;
 }
 
 .mainInfo__container__img {
+    align-self: center;
     max-width: 548px;
     width: 100%;
     margin: 0 auto;
@@ -284,8 +211,6 @@ $goldColor: #ffd900;
         transform: rotate(15deg);
     }
     img{
-        position: relative;
-        z-index: 2;
         width: 100%;
         height: 100%;
         object-fit: cover;
@@ -325,6 +250,155 @@ $goldColor: #ffd900;
         box-shadow: 0 0 0 7px $lightPurpleColor ;
     }
 }
+
+
+
+.cards {
+    margin-top: -100px;
+    // background: #000;
+    position: relative;
+    z-index: 3;
+}
+
+.cards__container {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: stretch;
+    justify-content: space-around;
+}
+
+.cards__container__element {
+    padding: 33px 15px;
+    margin: 0 10px 10px;
+    background: $whiteColor;
+    border: 2px solid $purpleColor;
+    border-radius: 15px;
+    min-height: 183px;
+    flex: 1 1 auto;
+    width: calc(33% - 20px);
+    min-width: 180px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    box-shadow:  0 2px 10px -3px #000000;
+}
+
+.card__icon {
+    width: 50px;
+    height: 50px;
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+}
+
+.card__title {
+    margin-top: 10px;
+    text-align: center;
+    color: $purpleColor;  
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 21px;
+    span {
+        font-weight: 800;
+        font-size: 24px;
+        line-height: 29px;
+        color: currentColor;
+    }
+}
+@media (max-width: 767.8px) {
+    .header__nav {
+        position: fixed;
+        top: 0;
+        left: 0;
+        padding: 15px;
+        padding-top: 55px;
+        width: 100%;
+        height: 100%;
+        min-height: 100vh;
+        background-color: $purpleColor;
+        text-align: center;
+        overflow: auto;
+        font-size: 18px;
+        transform: translateX(100%);
+        transition: all .2s ease-out;
+    }
+
+    .header__nav__list__item {
+        &:not(:last-child) {
+            margin-bottom: 20px;
+        }
+    }
+
+    .sublist__wrapper {
+        padding-bottom: 5px;
+
+        &::before {
+            content: '';
+            display: inline-block;
+            position: absolute;
+            bottom: 0;
+            height: 3px;
+            width: 0%;
+            left: 50%;
+            transform: translateX(0%);
+            border-radius: 3px;
+            background-color: $whiteColor;
+            transition: all .2s ease-in-out;
+        }
+
+        &.opened {
+            padding-bottom: 10px;
+
+            &::before {
+                width: 50%;
+                transform: translateX(-50%);
+            }
+
+            span::after {
+                transform: rotate(180deg);
+            }
+        }
+    }
+
+    .sublist__container {
+        max-height: 0;
+        overflow: hidden;
+        transition: max-height 0.2s ease-in-out;
+    }
+
+    .sublist__container__item {
+        margin-top: 10px;
+    }
+
+    body.active {
+        overflow: hidden;
+
+        .header__nav {
+            transform: translateX(0);
+        }
+
+        .header__burger {
+            &::after {
+                top: 50%;
+                transform: rotate(45deg);
+            }
+
+            &::before {
+                top: 50%;
+                transform: rotate(-45deg);
+            }
+
+            span {
+                transform: scale(0);
+            }
+        }
+    }
+}
+
+
 @media (min-width: 767.8px) {
     .header {
         padding: 20px 0;
@@ -416,6 +490,10 @@ $goldColor: #ffd900;
     .mainInfo__container__info__btn {
         justify-self: start;
         padding: 15px 30px;
+    }
+    .cards__container__element {
+        max-width: 168px;
+        width: 100%;
     }
 }
 
